@@ -22,7 +22,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.openqa.selenium.remote.ErrorCodes.SUCCESS_STRING;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
@@ -56,8 +55,7 @@ class RemotableByTest {
             });
     driver.findElement(By.cssSelector("#foo"));
 
-    assertThat(parameters.get())
-        .isEqualTo(ImmutableMap.of("using", "css selector", "value", "#foo"));
+    assertThat(parameters).hasValue(Map.of("using", "css selector", "value", "#foo"));
   }
 
   @Test
@@ -79,8 +77,7 @@ class RemotableByTest {
           }
         });
 
-    assertThat(parameters.get())
-        .isEqualTo(ImmutableMap.of("using", "css selector", "value", "#foo"));
+    assertThat(parameters).hasValue(Map.of("using", "css selector", "value", "#foo"));
   }
 
   @Test
@@ -108,8 +105,7 @@ class RemotableByTest {
 
     driver.findElement(new CustomBy());
 
-    assertThat(parameters.get())
-        .isEqualTo(ImmutableMap.of("using", "magic", "value", "abracadabra"));
+    assertThat(parameters).hasValue(Map.of("using", "magic", "value", "abracadabra"));
   }
 
   @Test
@@ -138,8 +134,7 @@ class RemotableByTest {
 
     driver.findElement(new CustomBy());
 
-    assertThat(parameters.get())
-        .isEqualTo(ImmutableMap.of("using", "css selector", "value", "not-magic"));
+    assertThat(parameters).hasValue(Map.of("using", "css selector", "value", "not-magic"));
   }
 
   @Test
@@ -192,8 +187,7 @@ class RemotableByTest {
     driver.findElement(new CustomBy("two"));
     driver.findElement(new CustomBy("three"));
 
-    assertThat(parameters.get())
-        .isEqualTo(ImmutableMap.of("using", "css selector", "value", "three"));
+    assertThat(parameters).hasValue(Map.of("using", "css selector", "value", "three"));
   }
 
   private Response createResponse(Object value) {
